Fix missing colour on drop-shadow for mid div

--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,8 @@ body>div {
     padding-top: 1rem;
     padding-bottom: 4rem;
     background-color: white;
-    filter: drop-shadow(5px 5px 10px);
-    -webkit-filter: drop-shadow(5px 5px 5px #5f5f5f1c);
+    filter: drop-shadow(5px 5px 10px #5f5f5f1c);
+    -webkit-filter: drop-shadow(5px 5px 10px #5f5f5f1c);
 }
 
 .body-right-section>div:nth-child(2)>h2 {
